# matrix_mult_open_cl

./: .gitignore  CMakeLists.txt  main.cpp  output.txt
